test/langtools/tools/javac/superInit/SuperInitBad05.out
SuperInitBad05.java:15:18: compiler.err.cant.ref.before.ctor.called: x
1 error
